--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                     <li>bare repository modify bug</li>
                     <li></li>
                     <li></li>
+                    <li>bare repository</li>
+                    <li>working area</li>
+                    <li>deltached HEAD</li>
                     <li></li>
                     <li></li>
                     <li></li>
