Modify index.html and create remote branch and create local

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li>working area</li>
                     <li>deltached HEAD</li>
                     <li>to remote main</li>
-                    <li></li>
+                    <li>fetch remote branch and create local branch</li>
                     <li></li>
                     <li></li>
                     <li></li>
