Add no fastword

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li>deltached HEAD</li>
                     <li>to remote main</li>
                     <li>fetch remote branch and create local branch</li>
-                    <li></li>
+                    <li>no fast-forword</li>
                     <li></li>
                     <li></li>
                     <li></li>
