--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="panel">
                 <ol>
                     <li>config</li>
-                    <li></li>
+                    <li>remote</li>
                     <li></li>
                     <li></li>
                     <li></li>
