--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <ol>
                     <li>config</li>
                     <li>remote</li>
-                    <li></li>
-                    <li></li>
+                    <li>add</li>
+                    <li>log</li>
                     <li></li>
                     <li></li>
                     <li></li>
